// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputTextarea when input is blank it should not have filled state 1`] = `
<div>
  <textarea
    class="p-inputtextarea p-inputtext p-component"
    data-pc-name="inputtextarea"
    data-pc-section="root"
  />
</div>
`;

exports[`InputTextarea when input is disabled it should render as disabled 1`] = `
<div>
  <textarea
    class="p-inputtextarea p-inputtext p-component p-disabled"
    data-pc-name="inputtextarea"
    data-pc-section="root"
    disabled=""
  />
</div>
`;

exports[`InputTextarea when input is is set for validation only 1`] = `
<div>
  <textarea
    class="p-inputtextarea p-inputtext p-component p-filled"
    data-pc-name="inputtextarea"
    data-pc-section="root"
  />
</div>
`;

exports[`InputTextarea when textarea is enabled then textarea accepts data entry and have filled state 1`] = `
<div>
  <textarea
    class="p-inputtextarea p-inputtext p-component p-filled"
    data-pc-name="inputtextarea"
    data-pc-section="root"
  />
</div>
`;

exports[`InputTextarea when textarea is is autosizing and has rows and columns it is rendered correctly 1`] = `
<div>
  <textarea
    class="p-inputtextarea p-inputtext p-component p-inputtextarea-resizable"
    cols="12"
    data-pc-name="inputtextarea"
    data-pc-section="root"
    rows="3"
    style="overflow: hidden; height: 0px;"
  />
</div>
`;
